# quiz-server

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
data/: quiz_example.yaml
src/quiz_server/: __main__.py
